fix: icons alignment

--- a/Seção 14 - React com compenentes de classe (Básico) - JS/lista_tarefa/src/components/Main.css
+++ b/Seção 14 - React com compenentes de classe (Básico) - JS/lista_tarefa/src/components/Main.css
@@ -56,6 +56,11 @@
   transition: all 0.5s;
 }
 
+.tasks li div {
+  display: flex;
+  align-items: center;
+}
+
 .tasks li:hover {
   background: #cccccc3d;
 }
